# lot-of-cars

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: main.rs
src/game/: car.rs  mod.rs  player.rs
