[package]
name = "lot-of-cars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leafwing-input-manager = "0.11.2"
bevy_xpbd_2d = "0.3"
rand = "0.8.5"

[dependencies.bevy]
version = "0.12.1"

[dependencies.bevy_asset_loader]
version = "0.18"
features = [ "2d" ]

[dependencies.bevy_pancam]
version = "0.10"
features = ["bevy_egui"]

[dependencies.bevy-inspector-egui]
version = "0.21"
optional = true

[features]
default = ["hot", "dyn", "inspector", "phys-debug"]
hot = [ "bevy/file_watcher" ]
dyn = [ "bevy/dynamic_linking" ]
inspector = [ "bevy-inspector-egui" ]
phys-debug = [ "bevy_xpbd_2d/debug-plugin"]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.native-release]
inherits = "release"
lto = true

[profile.dev]
opt-level = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3
